2007-02-01  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp (pull-other-hidden-window): rename from other-hidden-window. all callers updated.

	* core.lisp (save-frame-excursion): new macro

2007-01-31  Shawn Betts  <sabetts@vcn.bc.ca>

	* core.lisp (split-frame-v): call *new-frame-hook*
	(split-frame-h): likewise

	* primitives.lisp (*new-frame-hook*): new hook

	* core.lisp (current-group): new function

2007-01-28  Shawn Betts  <sabetts@vcn.bc.ca>

	* core.lisp (set-font): open the font for each screen
	(add-group): put the new group at the end of the group list
	(remove-window): update the mode line
	(process-mapped-window): likewise

	* mode-line.lisp (mode-line-format-elt): use the symbol as a string if it's unbound. ignore T and NIL
	(screen-mode-line-mode): check the arg types
	(toggle-mode-line): likewise

2007-01-27  Shawn Betts  <sabetts@vcn.bc.ca>

	* stumpwm.lisp (stumpwm-internal-loop): print the error before throwing :quit

	* core.lisp (reparent-window): give normal windows a black bg

	* stumpwm.lisp (error-handler): new function

	* primitives.lisp (window): new slots width height

	* core.lisp (xwin-send-configuration-notify): take the geometry as arguments. all callers updated.
	(geometry-hints): use cached window geometry slots
	(reparent-window): likewise
	(maximize-window): call set-window-geometry
	(group-add-window): init x y width height border-width window slots
	(process-mapped-window): call set-window-geometry
	(handle-unmanaged-window): new function
	(handle-managed-window): likewise
	(:configure-request): call handle-managed-window and handle-unmanaged-window
	(update-window-properties): only maximize the window being updated
	(handle-event): catch xlib:window-error and xlib:drawable-error events

2007-01-26  Shawn Betts  <sabetts@vcn.bc.ca>

	* stumpwm.lisp (error-handler): new defun
	(stumpwm): set error handler
	(stumpwm-internal-loop): remove catch for drawable and window-error 
