@@ -1,6 +1,7 @@
 2007-02-01  Shawn Betts  <sabetts@vcn.bc.ca>
 
 	* user.lisp (pull-other-hidden-window): rename from other-hidden-window. all callers updated.
+	(other-hidden-window): new function
 
 	* core.lisp (save-frame-excursion): new macro
 
